[package]
name = "killp"
version = "0.1.0"
edition = "2021"
description = "A simple CLI tool to kill processes running on specified ports on Linux and macOS"
license = "MIT"
authors = ["Ephraim Duncan <ephraimduncan68@gmail.com>"]
repository = "https://github.com/ephraimduncan/pkill"
keywords = ["cli", "network", "port", "process"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
